implemented springboot for this classes, not finished yet